Fix display on mobile for too long add info blocks

--- a/src/components/resume/Experience/common.module.scss
+++ b/src/components/resume/Experience/common.module.scss
@@ -1,5 +1,5 @@
 @mixin expBlockEdit {
-    display: inline-block;
+    display: inline;
     margin-left: 0.3rem;
     min-width: 50px;
 }
